# OasisMove

./: .buildinfo  .flake8  .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  api.html  conda.html  docker.html  environment.yml  features.html  genindex.html  getting_started.html  hooks.html  index.html  installation.html  interpolation.html  intro.html  markdown-notebooks.html  markdown.html  movingcylinder.html  movingtg.html  movingvortex.html  movingwall.html  mwe.py  mwe_hdf5.py  mwe_xdmf.py  notebooks.html  objects.inv  parameters.html  py-modindex.html  pyproject.toml  requirements.txt  restart.html  search.html  searchindex.js  stenosis.html  tutorials.html
.github/workflows/: build_docs.yml  check_and_test_package.yml  check_formatting.yml  deploy_pages.yml  test_package_coverage.yml
_modules/: index.html
_modules/oasismove/common/: io.html  utilities.html
_modules/oasismove/problems/: __init__.html
_modules/oasismove/problems/NSfracStep/: MovingCommon.html  MovingCylinder.html  MovingTaylorGreen3D.html  MovingVortex.html  MovingWall.html
_modules/oasismove/solvers/: NSfracStep.html
_modules/oasismove/solvers/NSfracStep/: IPCS_ABCN_Move.html
_sources/: api.rst  docker.md  features.md  index.md  installation.md  interpolation.md  markdown-notebooks.ipynb  movingcylinder.md  movingvortex.md  restart.md  stenosis.md  tutorials.md
docker/: Dockerfile
docs/: _config.yml  _toc.yml  api.rst  conda.md  docker.md  features.md  getting_started.md  hooks.md  index.md  installation.md  interpolation.md  movingcylinder.md  movingtg.md  movingvortex.md  movingwall.md  parameters.md  references.bib  restart.md  stenosis.md  tutorials.md
paper/: paper.bib  paper.md
src/oasismove/: NSCoupled.py  NSfracStep.py  NSfracStepMove.py  __init__.py  __main__.py  cli.py  run_oasis.py
src/oasismove/common/: __init__.py  io.py  utilities.py
src/oasismove/mesh/: cylinder.h5  cylinder.xdmf
src/oasismove/problems/: Cylinder.py  DrivenCavity.py  Nozzle2D.py  Skewed2D.py  SkewedFlow.py  StraightPipe.py  __init__.py
src/oasismove/problems/NSCoupled/: Cylinder.py  DrivenCavity.py  Nozzle2D.py  Skewed2D.py  SkewedFlow.py  __init__.py
src/oasismove/problems/NSfracStep/: Channel.py  Cylinder.py  DrivenCavity.py  DrivenCavity3D.py  EccentricStenosis.py  FlowPastSphere3D.py  LagrangianParticleTracking.py  LaminarChannel.py  Lshape.py  MovingAtrium.py  MovingAtriumCommon.py  MovingAtriumInsitu.py  MovingBackwardStep.py  MovingCommon.py  MovingCylinder.py  MovingTaylorGreen3D.py  MovingVentricle.py  MovingVortex.py  MovingWall.py  Probe.py  Skewed2D.py  SkewedFlow.py  Stenosis.py  StraightPipe.py  TaylorGreen2D.py  TaylorGreen3D.py  __init__.py  (+1 more)
tests/: test_NSCoupled.py  test_NSfracStep.py  test_NSfracStepMove.py  test_version.py
(+24 files in other folders)
