[build-system] # Require setuptool version due to https://github.com/pypa/setuptools/issues/2938
requires = ["setuptools>=61.0.0", "wheel"]

[project]
name = "oasismove"
version = "0.1.0"
description = "Moving domain version of Oasis"
authors = [{ name = "Henrik A. Kjeldsberg", email = "henriakj@simula.no" }]
license = { file = "LICENSE" }
readme = "README.md"

[project.scripts]
oasism = "oasismove.run_oasis:main"

[project.optional-dependencies]
test = [
    "flake8",
    "pytest",
    "pytest-cov",
]
docs = [
    "jupyter-book",
    "jupytext",
]
all = [
    "oasismove[test]",
    "oasismove[docs]"
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--cov=./",
    "--cov-report=html",
    "--cov-report=term-missing",
    "-v"
]
testpaths = [
    "tests"
]

