[build-system] # Require setuptool version due to https://github.com/pypa/setuptools/issues/2938
requires = ["setuptools>=61.0.0", "wheel"]

[project]
name = "oasismove"
version = "0.4.0"
description = "Verified and validated CFD solver for moving domains"
authors = [{ name = "Henrik A. Kjeldsberg", email = "henriakj@simula.no" }]
license = { file = "LICENSE" }
readme = "README.md"

[project.scripts]
oasismove = "oasismove.run_oasis:main"

[project.optional-dependencies]
test = [
    "flake8",
    "pytest",
    "pytest-cov",
]
docs = [
    "jupyter-book",
    "jupytext",
]
all = [
    "oasismove[test]",
    "oasismove[docs]"
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--cov=./",
    "--cov-report=xml",
    "--cov-report=term-missing",
    "-v"
]
testpaths = [
    "tests"
]

